use Double.valueOf for better performance